@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlToCsvUsingLinqTest.cs" />
+    <Compile Include="XmlToCsvTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XmlConversionLibrary\XmlConversionLibrary.csproj">
